# llm-interview-hasegawa

./: Memo.md  README.md  all_results.csv  pyproject.toml
configs/: a.json  default.yaml  local.yaml  local_human.yaml  local_human_llm_CoT.yaml  local_human_llm_zero-shot.yaml  local_human_random_CoT.yaml  local_human_random_zeroshot.yaml  local_human_store.yaml  local_llm.yaml  local_llm_IT.yaml  local_llm_store.yaml  local_zero-shot_few-shot.yaml  local_zero-shot_few-shot_1.yaml
data/CreatedPersonaData_2025_10_nurse/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  11.txt  12.txt  13.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt
data/筑波大学宇津呂先生-20241227T124014Z-001/: dialogs.html
data/筑波大学宇津呂先生-20241227T124014Z-001/persona_settings/: endo_p.txt  ito_p.txt  iwahashi_p.txt  kato_p.txt  kawashima_p.txt  kobayashi_p.txt  matsumoto_p.txt  mizutani_p.txt  nakamura_p.txt  osaki_p.txt  (+6 more)
save_data/IT_engineer-hasegawa/: IT-engineer.csv
save_data/before_estimate_persona/: Iwahashi_slot_data_a.txt  Iwahashi_slot_data_k.txt  Kato_slot_data_a.txt  Kato_slot_data_k.txt  data_20250128.txt  dialog_ito.txt  endo_slot_data.txt
src/: README.md
src/interview_statetransition/: README.md  config.py  extract_persona_to_csv.py  human_interview_experiment_baseline.py  human_interview_experiment_proposed_method.py  human_interview_experiment_proposed_method_zero-shot_few-shot.py  interview_statetransition_semi_constructed_persona_estimate_hikitsugi_pool.py  make_fewshot_prompt.py  test.py  test_CoT.py
src/test/: test_json.py
src/test_code/: test.py
(+7242 files in other folders)
